--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@babel/preset-react": "^7.9.4",
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "style-loader": "^1.1.3",
     "styled-components": "^5.0.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
